--- a/src/Winhance.WPF/Features/Common/Resources/Styles/RegistryTooltipTemplate.xaml
+++ b/src/Winhance.WPF/Features/Common/Resources/Styles/RegistryTooltipTemplate.xaml
@@ -28,7 +28,7 @@
                 </TextBlock>
                 <TextBlock>
                     <Run Text="Current Value: "/>
-                    <Run Text="{Binding CurrentValue, Mode=OneWay, TargetNullValue='null'}"/>
+                    <Run Text="{Binding CurrentValue, Mode=OneWay, TargetNullValue='Key doesn\'t exist'}"/>
                 </TextBlock>
                 <TextBlock>
                     <Run Text="Recommended Value: "/>
@@ -62,7 +62,7 @@
                                 </TextBlock>
                                 <TextBlock>
                                     <Run Text="Current Value: "/>
-                                    <Run Text="{Binding CurrentValue, Mode=OneWay, TargetNullValue='null'}"/>
+                                    <Run Text="{Binding DisplayValue, Mode=OneWay}"/>
                                 </TextBlock>
                                 <TextBlock>
                                     <Run Text="Recommended Value: "/>
