--- a/src/Winhance.WPF/Features/Common/Views/MainWindow.xaml
+++ b/src/Winhance.WPF/Features/Common/Views/MainWindow.xaml
@@ -15,7 +15,8 @@
         xmlns:advancedToolsControls="clr-namespace:Winhance.WPF.Features.AdvancedTools.Controls"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:utilities="clr-namespace:Winhance.WPF.Features.Common.Utilities"
-        Title="Winhance"
+        xmlns:loc="clr-namespace:Winhance.WPF.Features.Common.Extensions"
+        Title="{loc:Localize App_Title}"
         Background="Transparent"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanResize"
@@ -112,11 +113,11 @@
                                                    FontSize="18"
                                                    FontWeight="Light"
                                                    Foreground="{DynamicResource PrimaryTextColor}">
-                                                <Run Text="Winhance "/>
+                                                <Run Text="{loc:Localize App_Title}"/><Run Text=" "/>
                                                 <Run FontSize="12"
                                                      FontStyle="Italic"
                                                      Foreground="Gray"
-                                                     Text="by Memory"/>
+                                                     Text="{loc:Localize App_By}"/>
                                         </TextBlock>
                                 </DockPanel>
 
@@ -140,7 +141,7 @@
                                                 Height="28"
                                                 Margin="0,0,0,0"
                                                 Command="{Binding SaveUnifiedConfigCommand}"
-                                                ToolTip="Save Configuration"
+                                                ToolTip="{loc:Localize Tooltip_SaveConfiguration}"
                                                 Style="{StaticResource WindowControlButton}"
                                                 WindowChrome.IsHitTestVisibleInChrome="True">
                                             <iconPacks:PackIconMaterial Kind="ContentSave"
@@ -153,7 +154,7 @@
                                                 Height="28"
                                                 Margin="0,0,0,0"
                                                 Command="{Binding ImportUnifiedConfigCommand}"
-                                                ToolTip="Import Config"
+                                                ToolTip="{loc:Localize Tooltip_ImportConfig}"
                                                 Style="{StaticResource WindowControlButton}"
                                                 WindowChrome.IsHitTestVisibleInChrome="True">
                                             <iconPacks:PackIconMaterial Kind="FolderOpen"
@@ -180,7 +181,7 @@
 
                                         <!-- Theme Toggle Button -->
                                         <Button Command="{Binding ToggleThemeCommand}"
-                                                ToolTip="Toggle Winhance Theme"
+                                                ToolTip="{loc:Localize Tooltip_ToggleTheme}"
                                                 Style="{StaticResource WindowControlButton}"
                                                 WindowChrome.IsHitTestVisibleInChrome="True"
                                                 Margin="0,0,0,0">
@@ -194,7 +195,7 @@
                                                 Height="28"
                                                 Margin="0,0,0,0"
                                                 Command="{Binding OpenDonateCommand}"
-                                                ToolTip="Donate to Support Development"
+                                                ToolTip="{loc:Localize Tooltip_Donate}"
                                                 Style="{StaticResource WindowControlButton}"
                                                 WindowChrome.IsHitTestVisibleInChrome="True">
                                             <iconPacks:PackIconMaterial Kind="Heart"
@@ -257,7 +258,7 @@
                                                         Style="{StaticResource NavigationButton}"
                                                         Command="{Binding NavigationService.NavigateCommand}"
                                                         CommandParameter="SoftwareApps"
-                                                        Content="Software &amp; Apps"
+                                                        Content="{loc:Localize Nav_SoftwareAndApps}"
                                                         Margin="0,0,0,10"
                                                         utilities:NavigationButtonProperties.IsSelected="{Binding SelectedNavigationItem, Converter={StaticResource StringEqualityConverter}, ConverterParameter=SoftwareApps}"
                                                         utilities:NavigationButtonProperties.IsLoading="{Binding LoadingRoute, Converter={StaticResource StringEqualityConverter}, ConverterParameter=SoftwareApps}">
@@ -271,7 +272,7 @@
                                                         Style="{StaticResource NavigationButton}"
                                                         Command="{Binding NavigationService.NavigateCommand}"
                                                         CommandParameter="Optimize"
-                                                        Content="Optimize"
+                                                        Content="{loc:Localize Nav_Optimize}"
                                                         Margin="0,0,0,10"
                                                         utilities:NavigationButtonProperties.IsSelected="{Binding SelectedNavigationItem, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Optimize}"
                                                         utilities:NavigationButtonProperties.IsLoading="{Binding LoadingRoute, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Optimize}">
@@ -285,7 +286,7 @@
                                                         Style="{StaticResource NavigationButton}"
                                                         Command="{Binding NavigationService.NavigateCommand}"
                                                         CommandParameter="Customize"
-                                                        Content="Customize"
+                                                        Content="{loc:Localize Nav_Customize}"
                                                         Margin="0,0,0,10"
                                                         utilities:NavigationButtonProperties.IsSelected="{Binding SelectedNavigationItem, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Customize}"
                                                         utilities:NavigationButtonProperties.IsLoading="{Binding LoadingRoute, Converter={StaticResource StringEqualityConverter}, ConverterParameter=Customize}">
@@ -302,7 +303,7 @@
                                                 <Button x:Name="AdvancedToolsButton"
                                                         Style="{StaticResource NavigationButton}"
                                                         Command="{Binding AdvancedToolsCommand}"
-                                                        Content="Advanced  Tools" 
+                                                        Content="{loc:Localize Nav_AdvancedTools}"
                                                         Margin="0,0,0,10"
                                                         utilities:NavigationButtonProperties.IsSelected="{Binding SelectedNavigationItem, Converter={StaticResource StringEqualityConverter}, ConverterParameter=AdvancedTools}">
                                                         <Button.Tag>
@@ -313,7 +314,7 @@
                                                 </Button>
                                                 <Button x:Name="MoreButton"
                                                         Style="{StaticResource NavigationButton}"
-                                                        Content="More"
+                                                        Content="{loc:Localize Nav_More}"
                                                         Margin="0,0,0,10"
                                                         VerticalAlignment="Bottom"
                                                         Command="{Binding MoreCommand}"
