--- a/src/Winhance.WPF/Features/SoftwareApps/Views/ExternalAppsTableView.xaml
+++ b/src/Winhance.WPF/Features/SoftwareApps/Views/ExternalAppsTableView.xaml
@@ -124,13 +124,13 @@
                     </DataGridTemplateColumn>
 
                     <!-- Category Column -->
-                    <DataGridTemplateColumn Header="Category" Width="250" CanUserResize="True" SortMemberPath="Category">
+                    <DataGridTemplateColumn Header="Category" Width="250" CanUserResize="True" SortMemberPath="GroupName">
                         <DataGridTemplateColumn.HeaderStyle>
                             <Style TargetType="DataGridColumnHeader" BasedOn="{StaticResource ThemedDataGridColumnHeader}" />
                         </DataGridTemplateColumn.HeaderStyle>
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Category}" Margin="5,2" Style="{StaticResource DataGridTextBlockStyle}"/>
+                                <TextBlock Text="{Binding GroupName}" Margin="5,2" Style="{StaticResource DataGridTextBlockStyle}"/>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
